--- a/app/globals.css
+++ b/app/globals.css
@@ -43,6 +43,74 @@ body {
 .absolute.inset-0.z-10.h-full.bg-white.rounded-md.shadow {
   background: #79633a !important;
 }
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper {
+  width: 100%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.swiper-slide {
+  background-size: cover;
+  background-position: center;
+}
+
+.mySwiper2 {
+  height: 80%;
+  width: 100%;
+}
+
+.mySwiper {
+  height: 20%;
+  box-sizing: border-box;
+  padding: 10px 0;
+}
+
+.mySwiper .swiper-slide {
+  width: 25%;
+  height: 100%;
+  opacity: 0.4;
+}
+
+.mySwiper .swiper-slide-thumb-active {
+  opacity: 1;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.swiper-slide {
+  border-radius: 16px !important;
+}
+.swiper.swiper-initialized.swiper-horizontal.swiper-free-mode.swiper-watch-progress.mySwiper.swiper-backface-hidden.swiper-thumbs {
+  margin-top: 18px !important;
+}
 @layer components {
   .btn-primary {
     @apply text-white bg-rust-red border-0 py-3 px-6 focus:outline-none hover:bg-opacity-70  text-base font-bold rounded-2xl;
