--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@ body {
     @apply text-base font-normal;
   }
   h3 {
-    @apply text-xl md:text-3xl lg:text-4xl;
+    @apply text-lg md:text-3xl lg:text-4xl;
   }
 }
 
@@ -27,7 +27,9 @@ body {
 
   border-radius: 16px;
 }
-
+.w-full.h-max.text-gray-700.p-4.antialiased.font-sans.text-base.font-light.leading-relaxed {
+  padding: 0 !important;
+}
 .main_content {
   background: url(../assets/bg.png);
   width: 100%;
@@ -42,78 +44,12 @@ body {
 }
 .absolute.inset-0.z-10.h-full.bg-white.rounded-md.shadow {
   background: #79633a !important;
-}
-.swiper {
-  width: 100%;
-  height: 100%;
+  border-radius: 14px !important;
 }
 
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-
-  /* Center slide text vertically */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.swiper {
-  width: 100%;
-  height: 300px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.swiper-slide {
-  background-size: cover;
-  background-position: center;
-}
-
-.mySwiper2 {
-  height: 80%;
-  width: 100%;
-}
-
-.mySwiper {
-  height: 20%;
-  box-sizing: border-box;
-  padding: 10px 0;
-}
-
-.mySwiper .swiper-slide {
-  width: 25%;
-  height: 100%;
-  opacity: 0.4;
-}
-
-.mySwiper .swiper-slide-thumb-active {
-  opacity: 1;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.swiper-slide {
-  border-radius: 16px !important;
-}
-.swiper.swiper-initialized.swiper-horizontal.swiper-free-mode.swiper-watch-progress.mySwiper.swiper-backface-hidden.swiper-thumbs {
-  margin-top: 18px !important;
-}
 @layer components {
   .btn-primary {
-    @apply text-white bg-rust-red border-0 py-3 px-6 focus:outline-none hover:bg-opacity-70  text-base font-bold rounded-2xl;
+    @apply text-white bg-rust-red border-0 py-3 px-6 focus:outline-none hover:bg-opacity-70  text-xs lg:text-base font-semibold lg:font-bold rounded-2xl;
   }
   .btn-main {
     @apply text-white bg-primary border-0 py-3 px-3 sm:px-6 focus:outline-none hover:bg-opacity-70  text-xs sm:text-base font-bold rounded-2xl;
@@ -128,16 +64,12 @@ body {
     background: rgba(26, 27, 32, 0.9);
     border: 1px solid rgba(255, 255, 255, 0.3);
     backdrop-filter: blur(10px);
-    /* Note: backdrop-filter has minimal browser support */
-
     border-radius: 16px;
   }
   .review {
     @apply w-full  text-white rounded-2xl;
     background: rgba(26, 27, 32, 0.85);
     border: 1px solid rgba(255, 255, 255, 0.3);
-    /* blur 20 */
-
     backdrop-filter: blur(10px);
   }
   .chad {
